<resources>
    <string name="app_name">Whatscan :- Toolkit For WA</string>
    <string name="intro_bulk_text">Send messages &amp; media files easily in just one click</string>
    <string name="intro_deleted_text">Recover your deleted message &amp; media files by anyone else in your contact list.</string>
    <string name="intro_bubble_text">Chat with friends without seen message in WhatsApp</string>
    <string name="intro_autoR_text">Send schedule messages and replay automatic in Whatsapp</string>
    <string name="intro_cleaner_text">Explore your WhatsApp Data with Data cleaning in just one click with our App.</string>
    <string name="intro_report_text">With whom do you talk the most in generate report</string>
    <string name="intro_sticker_text">Create your own stickers and explore stickers and added in your WhatsApp</string>
    <string name="intro_forward_text">Forward message to unlimited contents on WhatsApp automatically with just one click.</string>
    <string name="intro_caption_text">This feature lets chat with anyone on WhatsApp without saving number on contact list.</string>
    <string name="intro_much_text">This Application is must Awaiting App in Play Store</string>
    <string name="and_much_more_feature_in_our_application">And Much More Features</string>
    <string name="whats_shake">Shake to Open</string>
    <string name="deleted_message">Recover Deleted Message</string>
    <string name="whatsWeb">WhatsWeb</string>
    <string name="whatsCleaner">Whats Cleaner</string>
    <string name="story_saver">Story Saver</string>
    <string name="direct_chat">Direct Chat</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="theme">Theme</string>
    <string name="setting">Setting</string>
    <string name="general">General</string>
    <string name="notification">Notification</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="security">Security</string>
    <string name="pattern_lock">Pattern Lock</string>
    <string name="change_pattern">Change Pattern</string>
    <string name="about_us">About Us</string>
    <string name="request_a_features">Request A Features</string>
    <string name="developers">Developers</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="legal">Legal</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="follow_us">Follow Us</string>
    <string name="prank_your_friend_with_fake_story">Prank Your Friend With Fake Story</string>
    <string name="prank_your_friend_with_fake_profile">Prank Your Friend With Fake Profile</string>
    <string name="first_name">Name</string>
    <string name="last_seen">Last Seen</string>
    <string name="emoji">Emoji</string>
    <string name="caption">Caption</string>
    <string name="captionAndText">Caption &amp; Text</string>
    <string name="select_profile">Select Profile</string>
    <string name="select_image">Select Image</string>
    <string name="watch_story">Watch Story</string>
    <string name="status">Status</string>
    <string name="status_date">Status Date</string>
    <string name="mobile">Mobile</string>
    <string name="watch_profile">Watch Profile</string>
    <string name="fake_profile">Fake Profile</string>
    <string name="fake_story">Fake Story</string>
    <string name="fake_chat">Fake Chat</string>
    <string name="fake_chat_edit">Edit Profile</string>
    <string name="text_emoji">Text To Emoji</string>
    <string name="emoji_emoticon">Emoticon</string>
    <string name="emoji_transform">Transform</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_share">Share</string>
    <string name="txt_favourite">Favourite</string>
    <string name="text_emoji_header">Text To Emoji Share With WhatsApp</string>
    <string name="text_emoji_msg">You can select the emoji you want and convert your assigned text to it .It can quickly convert any letter to emoji.</string>
    <string name="caption_status">Caption Status</string>
    <string name="fack_chat_name">Enter Your Name</string>
    <string name="fack_chat_status">Enter Your Status</string>
    <string name="fack_chat_edit_msg">Edit Message</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="online">Online</string>
    <string name="typing">Typing</string>
    <string name="call">Call Now</string>
    <string name="donaldTrump">Donald Trump</string>
    <string name="today">TODAY</string>
    <string name="typeMessage">Type a message </string>
    <string name="author">Author</string>
    <string name="myFriend">My Friend</string>
    <string name="my">Me</string>
    <string name="readMessage">Read Message</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="deliveryStatus">Delivery Status</string>
    <string name="repeat">Repeat</string>
    <string name="text_repeat">Repeat Text</string>
    <string name="text_repeat_num">Number of Repeat Text</string>
    <string name="text_new_line">New Line On</string>
    <string name="magic_text">Magic Text</string>
    <string name="mt_enter_name">Enter Your name</string>
    <string name="mt_done">Decorate Text</string>
    <string name="mt_done1">Reverse Text</string>
    <string name="cp_bg">Background</string>
    <string name="cp_gradient">Gradient</string>
    <string name="cp_tcolor">Text Color</string>
    <string name="cp_font">Font</string>
    <string name="cp_tsize">Text Size</string>
    <string name="cp_tstyle">Text Style</string>
    <string name="cp_save">Save Image</string>
    <string name="cp_font_downlod">Font Download</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="alreadysaved">Already saved!</string>
    <string name="accessibility">We need access to this service to perform certain features in WhatsPunch App, please go ahead and enable the switch above to enjoy all the features properly.</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permission!</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="reply">REPLY</string>
    <string name="wait_magic_is_happening_for_pranking_a_friend">Wait! Magic is happening for pranking a friend with fake story</string>
    <string name="tip_make_a_fake_story_take_screenshot_and_prank_your_frineds">Tip :- Make a Fake Story, Take Screenshot and Prank your friends</string>
    <string name="fake_story_wp">Fake Story For WhatsApp With Friend Prank</string>
    <string name="fake_profile_wp">Fake Profile For WhatsApp With Friend Prank</string>
    <string name="fake_story_info_text">Generate Fake Stories Exactly Similar to Whatsapp Story And Prank with your Friend to take "Screenshot" and show them to ask why you upload that type of story.</string>
    <string name="fake_profile_info_text">Generate Fake Profile Exactly Similar to Whatsapp Profile And Prank with your Friend to take "Screenshot" and show them to ask I know that person personally.</string>
    <string name="messages_and_calls_are_end_to_end_encrypted_tap_to_verify">Messages and calls are end-to-end encrypted. Tap to verify.</string>
    <string name="block">Block</string>
    <string name="report_contact">Report contact</string>
    <string name="about_and_phone_number">About and phone number</string>
    <string name="media_visibility">Media visibility</string>
    <string name="custom_notifications">Custom notifications</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="encryption">Encryption</string>
    <string name="hey_i_am_using_whatsapp_now">Hey there! I am Using WhatsApp.</string>
    <string name="disappearing_messages">Disappearing messages</string>
    <string name="off">Off</string>
    <string name="enable_to_this_features_to_launch_whatsapp_any_time_to_shake_mobile_phone">Enable to this features to launch WhatsApp any time to shake mobile phone.</string>
    <string name="shake_device">Shake Your Device And Open WhatsApp</string>
    <string name="shake_text">This Features You Open WhatsApp anytime on your phone even using any other Application. Just Shaking Device and Open WhatsApp.</string>
    <string name="selcet_title">Whats Service You Need Select It</string>
    <string name="select_text">Select Your Social Media For Whats Service You Need To Start For Shake Device To Open There Media.</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="business">Business</string>
    <string name="web_title">Dual WhatsApp With Lock</string>
    <string name="web_text">Using this tools you can use multi WhatsApp or WhatsApp Business Just By Scanning Qr Code With Lock And Fingerprint</string>
    <string name="skip_gt_gt">Skip</string>
    <string name="draw_pattern">Use Fingerprint Or Draw Pattern</string>
    <string name="re_draw">Re-Draw Pattern</string>
    <string name="verify">Verify Authentication</string>
    <string name="story_title">Save And Re-Share Your WhatsApp or Business Status Saver</string>
    <string name="story_text">In Every Contact We Saw Many type of Status In WhatsApp Some of You Like them. Now That Features Save And Re-Share it.</string>
    <string name="download">Download</string>
    <string name="repost">Re-Post</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="sign_up">Sign In</string>
    <string name="login_to_your_account_now">Sign in to your account Now!</string>
    <string name="create_new_pack">Create New Sticker Pack</string>
    <string name="pack_dialog_desc">Please specify title and creator for the pack.</string>
    <string name="creator_name">Creator Name</string>
    <string name="pack_name">Pack Name</string>
    <string name="txt_ok">OK</string>
    <string name="enable_automatic_forwarding">Enable Automatic Forwarding</string>
    <string name="smart_options">Smart options</string>
    <string name="turn_on_if_phone_is_locked">Turn on if phone is locked</string>
    <string name="reply_options">Reply options</string>
    <string name="reply_continuously">Reply continuously</string>
    <string name="time_delay_3_seconds">Time delay (3 Seconds)</string>
    <string name="reply_once">Reply once</string>
    <string name="welcome_message">Welcome message</string>
    <string name="someone_message">Someone message you after 3 days or first time</string>
    <string name="hi_welcome_thank_you">Hi welcome, thank you for messaging me, i will reply you soon</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>
    <string name="log_in_amp_sign_up">Log In &amp; Sign Up</string>
    <string name="write_your_message">Write somthing here…</string>
    <string name="choose_sending_mode">Choose Sending Mode</string>
    <string name="auto_replay_text">Auto Replay Text</string>
    <string name="select_quality_save">Select a quality to save</string>
    <string name="medium">MEDIUM</string>
    <string name="hd">HD</string>
    <string name="app_image_desc" translatable="false">app_image_desc</string>
</resources>