<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlAutoReplay"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20.0dp"
        android:layout_marginTop="20.0dp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/auto_replay_text"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input1"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_header"
        android:layout_marginStart="20.0dp"
        android:layout_marginTop="10.0dp"
        android:layout_marginEnd="20.0dp"
        android:layout_marginBottom="10.0dp"
        app:boxStrokeColor="@color/colorTools">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editreply_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/first_name"
            android:hint="@string/write_your_message"
            android:inputType="text"
            android:lines="3"
            android:paddingStart="10.0dp"
            android:paddingEnd="10.0dp"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/updatebtn"
        android:layout_width="80.0dp"
        android:layout_height="35.0dp"
        android:layout_below="@+id/text_input1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10.0dp"
        android:layout_marginEnd="20.0dp"
        android:layout_marginBottom="10.0dp"
        android:background="@drawable/button_light"
        android:fontFamily="@font/medium"
        android:gravity="center"
        android:text="@string/txt_ok"
        android:textColor="@color/colorWhite"
        android:textSize="15.0sp" />

    <TextView
        android:id="@+id/close_dialog"
        android:layout_width="80.0dp"
        android:layout_height="35.0dp"
        android:layout_below="@+id/text_input1"
        android:layout_marginTop="10.0dp"
        android:layout_marginEnd="20.0dp"
        android:layout_marginBottom="10.0dp"
        android:layout_toStartOf="@+id/updatebtn"
        android:background="@drawable/button_light"
        android:fontFamily="@font/medium"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite"
        android:textSize="15.0sp" />
</RelativeLayout>